[package]
name = "ff_buffer"
version = "0.1.0"
authors = ["Luca Rinaldi <to@lucar.in>"]
edition = "2021"
links = "libffbuffer"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
dirs = "5.0.0"

[dev-dependencies]
criterion = "0.4.0"

[features]
crosslto = []

[[bench]]
name = "producer_consumer"
harness = false

[[bench]]
name = "push_pop"
harness = false
