[package]
name = "ff_buffer"
version = "0.1.0"
authors = ["Luca Rinaldi <to@lucar.in>", "Valerio Besozzi"]
edition = "2021"
links = "libffbuffer"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
dirs = "5.0.1"

[dev-dependencies]
criterion = "0.5.1"

[features]
crosslto = []

[[bench]]
name = "producer_consumer"
harness = false

[[bench]]
name = "push_pop"
harness = false
