[package]
name = "ff_buffer"
description = "A fork of ff_buffer that provides FastFlow channels on Rust."
version = "0.1.0"
authors = ["Luca Rinaldi <to@lucar.in>", "Valerio Besozzi"]
edition = "2021"
links = "libffbuffer"
build = "build.rs"
license = "MIT"
repository = "https://github.com/valebes/ppl-ff-buffer"
readme = "README.md"
homepage = "https://github.com/valebes/ppl-ff-buffer"

[dependencies]

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
dirs = "5.0.1"

[dev-dependencies]
criterion = "0.5.1"

[features]
crosslto = []

[[bench]]
name = "producer_consumer"
harness = false

[[bench]]
name = "push_pop"
harness = false
